2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 445/bsps
	* bsp_specs: Hand edited to duplicate change Ralf applied to the CVS
	trunk.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* liblnk/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Added support for -nostdlibs.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* liblnk/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* start/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* startup/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Eliminate PGM.
	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.

2002-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds ghlinkcmds.
